fix: toast container  z-index issue

--- a/src/components/toast/toast.css
+++ b/src/components/toast/toast.css
@@ -7,7 +7,7 @@
  @layer components {
   /* Container */
   .kt-toast-container {
-    @apply fixed;
+    @apply fixed z-9999;
   }
 
   /* Toast */
